--- a/notes-en.html
+++ b/notes-en.html
@@ -27,7 +27,7 @@
     <script type="text/template">
       ##Instructor Notes
 
-      ##Ladies Learning Code: Intro to Browser Extensions with JavScript
+      ##Ladies Learning Code: Data Insights with Python
 
       <br>
       ##Tips for Instructors
