--- a/slides-en.html
+++ b/slides-en.html
@@ -59,7 +59,7 @@
       <img class="logo" src="framework/img/logo-llc-white.png" alt="Ladies Learning Code logo">
       <div class="info">
         <h1 class="heading-bg">
-          <span>Programming with Python</span>
+          <span>Data Insights with Python</span>
         </h1>
         <!-- TODO: Fill in instructor details -->
       <!--   <h2><span>with</span> Instructor Name</h2>
@@ -1388,7 +1388,7 @@
       <h2>Thank you!</h2>
 
       <h2 class="heading-bg">
-        <span>programming with Python</span>
+        <span>Data Insights with Python</span>
       </h2>
       <!-- <h3><span>with</span> Instructor Name</h3>
 
