Coder's code and recap

--- a/slides-en.html
+++ b/slides-en.html
@@ -117,6 +117,19 @@
       </script>
     </section>
 
+    <section class="slide" data-markdown data-toc>
+      <script type="text/template">
+        #Coders' code
+
+        1. Be friendly and welcoming
+        1. Be respectful of others by choosing words and actions with care
+        1. Be mindful of how much space you take up in conversations
+        1. Ask questions
+        1. Try your best (and have fun!)
+
+      </script>
+    </section>
+
     <section class="slide" data-markdown>
       <script type="text/template">
         ## What is programming? What is code?
@@ -188,6 +201,7 @@
         *   Great community
         *   The syntax looks similar to English
         *   Meaningful errors, easy to debug
+        *   4th most popular programming language [(SO Survey 2019)](https://insights.stackoverflow.com/survey/2019) 
 
 
       </script>
@@ -1347,6 +1361,22 @@
     * Look for sightings in Gimli (or some other place)
     * See how many sightings were in a specific year
     * anything else you can think of?
+
+  </script>
+</section>
+
+<section class="slide" data-markdown>
+  <script type="text/template">
+    ## Recap
+
+    What we learned today:
+
+    * What is programming
+    * How to write and run python programs
+    * Basic programming concepts
+    * How to work with files
+    * How to programmatically search for data in a file
+
 
   </script>
 </section>
