--- a/notes-en.html
+++ b/notes-en.html
@@ -44,7 +44,7 @@
 
       ###For the mentor huddle:
 
-      * Some mac users might fail to set up pycharm correctly with python 3. Before the workshop coach the mentors to handle this locally and not get side-tracked with the whole group explaining the python 2 vs. 3 differences
+      * Some mac users might fail to set up pycharm correctly with python 3. Before the workshop coach the mentors to handle this locally and not get side-tracked with the whole group explaining the python 2 vs. 3 differences. 
       * Avoid getting side tracked by higher level discussions, especially in the data structures sections. In your mentor huddle, remind your mentors of this
       * Instruct the mentors to keep feedback or suggestions on the content to themselves during the workshop and discuss with you during a break
 
@@ -56,12 +56,18 @@
       ### Content notes:
 
       * When you introduce pycharm and IDEs, give them a tour around the tool, show them how to show/hide windows, file tabs, navigate the project explorer, etc. Take your time with this.
-      * Configure your font size in pycharm before the workshop. Ctrl + zoom does not work in pycharm, the setting is under File > Settings > Editor > Font. Increase the font size to at least 16
+      * Exit and repeat creating a python file multiple times before saving, and stress that the file should be in the correct location. 
+      * Configure your font size in pycharm before the workshop. Ctrl + zoom does not work in pycharm, the setting is under File > Settings > Editor > Font. Increase the font size to at least 16.
       * Sometimes the green 'run' arrow in pycharm vanishes. That can mean the code in the py file is not valid. Learners can right click on the tab and run the file that way as well.
-      * Feel free to come up with and explore your own examples, especially in the data structures and functions sections.
+      * Feel free to come up with and explore your own examples, especially in the data structures and functions sections. We have provided some links on those slides to explore. 
       * Code sections prefixed by `>>>` are meant to be run in the console.
-      * Indented code should be run in .py files
+      * Indented code should be run in .py files.
       * If you are running out of time, you can run the individual exercises as code-alongs but there is no need to pressure yourself to get through all the content.
+
+      ### Timing:
+      * The individual exercises have suggested times on them. 
+      * Aim to get to about lists/loops by the lunch break.
+    
 
     </script>
   </section>
