themes copy + CC licensing copy

--- a/slides-en.html
+++ b/slides-en.html
@@ -36,11 +36,14 @@
 
     <div class="instructions">
       <!-- Add wifi info here -->
-      <!-- <h2>Get Connected</h2>
+      <h2>Get Connected</h2>
       <p>Network: <br>
-      Password: </p>  -->
+      Password: </p>
 
-      <!-- TODO put back when merged to master--> <p>Learner files (zip file): <a href="https://github.com/ladieslearningcode/llc-python/archive/master.zip">http://bit.ly/llc-python3</a></p>
+      <hr>
+
+      <h2>Download <br> &amp; Install</h2>
+      <p>Learner files (zip file): <a href="https://github.com/ladieslearningcode/llc-python/archive/master.zip">http://bit.ly/llc-python3</a></p>
       <p>Installation Instructions by Platform:</p>
       <ul>
         <li><a href="installation/windows.html">Windows</a></li>
@@ -58,6 +61,7 @@
     <section class="slide intro">
       <img class="logo" src="framework/img/logo-llc-white.png" alt="Ladies Learning Code logo">
       <div class="info">
+        <br>
         <h1 class="heading-bg">
           <span>Data Insights with Python</span>
         </h1>
@@ -130,6 +134,22 @@
       </script>
     </section>
 
+<!-- temp slide-->
+     <section class="slide" data-markdown>
+        <script type="text/template">
+          ## August's Theme is...
+
+          # Population
+
+          Population includes all individuals that live in a certain area, but why is that more people live in some places and less in others? What happens when more people live in the same amount of space?
+
+          **Explore Canadian cities and identify patterns within today’s dataset.**
+
+          Share your project using #clcCode4Change. More info [here](https://www.canadalearningcode.ca/code-can-change-the-world/).
+
+        </script>
+      </section>
+
     <section class="slide" data-markdown>
       <script type="text/template">
         ## What is programming? What is code?
@@ -201,7 +221,7 @@
         *   Great community
         *   The syntax looks similar to English
         *   Meaningful errors, easy to debug
-        *   4th most popular programming language [(SO Survey 2019)](https://insights.stackoverflow.com/survey/2019) 
+        *   4th most popular programming language [(SO Survey 2019)](https://insights.stackoverflow.com/survey/2019)
 
 
       </script>
