--- a/notes-fr.html
+++ b/notes-fr.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Femmes en programmation</title>
-  <!-- Ne modifiez pas : slideshow.css, les diapositives CSS ont besoin de ce fichier pour fonctionner
-  https://github.com/LeaVerou/csss -->
+  <title>Femmes en Programmation</title>
   <link rel="stylesheet" href="framework/css/slideshow.css" data-noprefix>
-
-  <!-- Styles propres au thème -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CQuicksand%7CPacifico%7COpen+Sans:400italic,400,300' rel='stylesheet' type='text/css' data-noprefix> -->
-  <link rel="stylesheet" href="framework/css/font-awesome.min.css" data-noprefix>
   <link rel="stylesheet" href="framework/css/fonts.css" data-noprefix>
-  <link rel="stylesheet" href="framework/css/highlightjs-themes/github.css" data-noprefix>
-  <link rel="stylesheet" href="framework/css/theme-llc.css" data-noprefix>
+  <link rel="stylesheet" href="framework/css/highlightjs/github.css" data-noprefix>
+  <link rel="stylesheet" href="framework/css/styles.css" data-noprefix>
   <link rel="shortcut icon" href="framework/img/favicon.ico">
-
-  <!-- Stypes propres à l'atelier -->
-  <link rel="stylesheet" href="framework/css/workshop.css" data-noprefix>
 
   <!-- S'occupe des préfixes CSS3 -->
   <script src="framework/scripts/prefixfree.min.js"></script>
 
-  <!-- Ouvre tous les liens dans une nouvelle fenêtrew -->
+  <!-- Ouvre tous les liens dans une nouvelle fenêtre -->
   <base target="_blank">
 </head>
 
 <!-- Barre de progression / durée : définissez la durée de la présentation avec « data-duration » en minutes. -->
 <body class="en" data-duration="360">
-
-
 
   <main>
 
