--- a/slides-en.html
+++ b/slides-en.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Ladies Learning Code</title>
-  <!-- Don't alter slideshow.css, CSSS slide deck needs it to work
-  https://github.com/LeaVerou/csss -->
   <link rel="stylesheet" href="framework/css/slideshow.css" data-noprefix>
-
-  <!-- Theme-specific styles -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CQuicksand%7CPacifico%7COpen+Sans:400italic,400,300' rel='stylesheet' type='text/css' data-noprefix> -->
-  <link rel="stylesheet" href="framework/css/font-awesome.min.css" data-noprefix>
   <link rel="stylesheet" href="framework/css/fonts.css" data-noprefix>
-  <link rel="stylesheet" href="framework/css/highlightjs-themes/github.css" data-noprefix>
-  <link rel="stylesheet" href="framework/css/theme-llc.css" data-noprefix>
+  <link rel="stylesheet" href="framework/css/highlightjs/github.css" data-noprefix>
+  <link rel="stylesheet" href="framework/css/styles.css" data-noprefix>
   <link rel="shortcut icon" href="framework/img/favicon.ico">
 
-  <!-- Workshop-specific styles -->
-  <link rel="stylesheet" href="framework/css/workshop.css" data-noprefix>
-
-  <!-- Takes care of CSS3 prefixes! -->
+  <!-- Takes care of CSS3 prefixes -->
   <script src="framework/scripts/prefixfree.min.js"></script>
 
   <!-- opens all links in a new window -->
@@ -27,58 +19,75 @@
 </head>
 
 <!-- Timer/progress bar: Define the presentation duration using "data-duration" in minutes. -->
+
 <body class="en" data-duration="360">
 
-  <!-- Welcome slide -->
-  <header class="slide">
-    <img class="logo" src="framework/img/logo-llc-white.png" alt="Ladies Learning Code logo">
-    <h1>Welcome to Ladies Learning Code!</h1>
-
-    <div class="instructions">
-      <!-- Add wifi info here -->
-      <h2>Get Connected</h2>
-      <p>Network: <br>
-      Password: </p>
-
-      <hr>
-
-      <h2>Download <br> &amp; Install</h2>
-      <p>Learner files (zip file): <a href="https://github.com/ladieslearningcode/llc-python/archive/master.zip">http://bit.ly/llc-python3</a></p>
-      <p>Installation Instructions by Platform:</p>
-      <ul>
-        <li><a href="installation/windows.html">Windows</a></li>
-        <li><a href="installation/mac.html">Mac</a></li>
-      </ul>
-    </div>
-    <!--<div class="sponsor">
-      <p>In partnership with
-      <img src="framework/img/telus-logo-white.svg" alt="Telus logo"></p>
-    </div>-->
-  </header>
-
   <main>
-    <!-- Instructor info -->
-    <section class="slide intro">
-      <img class="logo" src="framework/img/logo-llc-white.png" alt="Ladies Learning Code logo">
-      <div class="info">
-        <br>
-        <h1 class="heading-bg">
-          <span>Data Insights with Python</span>
-        </h1>
-        <!-- TODO: Fill in instructor details -->
-      <!--   <h2><span>with</span> Instructor Name</h2>
 
-      <img class="instructor-img" src="http://cl.ly/image/0r3Q3H110G36/profile-generic.jpg" alt="instructor name">
-      <ul>
-        <li><i class="fa fa-envelope"></i><a href="mailto:">hello@email.com</a></li>
-        <li><i class="fa fa-desktop"></i><a href="#">mywebsite.com</a></li>
-        <li><i class="fa fa-twitter"></i><a href="http://twitter.com/">@twitter</a></li>
-      </ul> -->
-        <!--<div class="sponsor">
-          <p>In partnership with</p>
-          <img src="framework/img/telus-logo-white.svg" alt="Telus logo">
-        </div>-->
+    <section class="slide welcome highlight">
+      <h1><img class="logo-stacked" src="framework/img/llc-logo-stacked-white.png" alt="Ladies Learning Code logo">Welcome!</h1>
+
+      <div class="instructions">
+        <!-- ADD WIFI INFO HERE -->
+        <h2>Get <br>Connected</h2>
+        <p><strong>Wifi:</strong> Network</p>
+        <p><strong>Password:</strong> Password</p>
+        <hr>
+
+        <h2>Download<br> & Install</h2>
+        <ol class="downloads">
+          <li>Learner files (zip file): <a href="https://github.com/ladieslearningcode/llc-python/archive/master.zip">http://bit.ly/llc-python3</a></p>
+            <ul>
+              <li>unzip the learner file (<em>extract all</em> if you’re on a PC)</li>
+              <li>open <em>slides.html</em> in the browser to view the slides</li>
+            </ul>
+          </li>
+          <li>Installation Instructions by Platform:</li>
+          <ul>
+            <li><a href="installation/windows.html">Windows</a></li>
+            <li><a href="installation/mac.html">Mac</a></li>
+          </ul>
+        </ol>
       </div>
+      <footer>
+        <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License"
+            src="framework/img/cc-by-nc.png" /></a>
+        <p class="left">Content created by Darcie Milliken for <a
+            prefix="cc: http://creativecommons.org/ns#" href="http://canadalearningcode.ca" property="cc:attributionName"
+            rel="cc:attributionURL">Canada Learning Code</a></p>
+        <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span>
+          arrow keys to navigate</p>
+      </footer>
+    </section>
+
+    <section class="slide intro">
+      <img class="logo" src="framework/img/llc-logo-white.png" alt="Ladies Learning Code logo">
+      <h1 class="heading-bg">
+        <span>Data Insights with Python</span>
+      </h1>
+
+      <!-- FILL IN INSTRUCTOR DETAILS -->
+      <!--<img class="instructor" src="https://placehold.it/225x225" alt="Instructor Name">
+      <h2><span class="cursive">with</span> Instructor name</h2>
+      <ul>
+        <li><a href="mailto:">hello@email.com</a></li>
+        <li><a href="http://website.com">website.com</a></li>
+        <li><a href="http://twitter.com/">@twitter</a></li>
+      </ul>
+
+      <div class="sponsor">
+        <p>In partnership with<br><img src="framework/img/telus-logo-white.svg" alt="Telus"><br><img src="framework/img/logo-accenture.svg"
+            alt="Accenture"></p>-->
+      </div>
+      <footer>
+        <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License"
+            src="framework/img/cc-by-nc.png" /></a>
+        <p class="left">Content created by Darcie Milliken for <a
+            prefix="cc: http://creativecommons.org/ns#" href="http://canadalearningcode.ca" property="cc:attributionName"
+            rel="cc:attributionURL">Canada Learning Code</a></p>
+        <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span>
+          arrow keys to navigate</p>
+      </footer>
     </section>
 
     <section class="slide project" data-markdown>
@@ -1006,26 +1015,25 @@
     Let's combine this with what we learned about conditionals.
 
     * Create a new file in the exercices folder called `weather_loops.py`
-
     * Create a list with each type of weather in it
-
     * Add a loop to to **loop through** each type of weather
-
     * Add an if/elif/else block inside the loop to print out how to dress for each type of weather
-
     * You should get one print statement for each type of weather in the list.
-
     * Bonus: If you finish early, use concatenation to prepend the type of weather to the print statement along with the advice (example: "Snowing : Wear snowpants")
-
 
   </script>
 </section>
 
-<section class="slide title full-monty">
+<section class="slide centered" data-markdown>
+  <script type="text/template">
   <!-- Mandatory Monty Python reference -->
-  <h1 class="heading-bg"><span>And now for something completely different</span></h1>
+  # And now for something completely different
 
-  <aside>Source: <a href="https://www.flickr.com/photos/nerdcoreblog/13995269592/">flickr.com/photos/nerdcoreblog</a></aside>
+  ![Monty Python](framework/img/workshop/monty-python.jpg)
+
+  <aside>Source : <a href="https://www.flickr.com/photos/nerdcoreblog/13995269592/">flickr.com/photos/nerdcoreblog</a></aside>
+
+  </script>
 </section>
 
 <!-- -------------------- -->
@@ -1427,39 +1435,33 @@
 
     <section class="slide centered" data-markdown>
       <script type="text/template">
-      </br></br> </br>
+        #Good Luck
         ![Good luck](framework/img/workshop/good-luck.gif) <!-- .element: style="width: 50%" -->
       </script>
     </section>
 
-<!-- Last slide -->
-
+    <!-- Last slide -->
     <section class="slide last">
-      <h2>Thank you!</h2>
-
+      <h1>Thank you!</h1>
       <h2 class="heading-bg">
-        <span>Data Insights with Python</span>
+        <span>Data Insights with Python<br></span>
       </h2>
-      <!-- <h3><span>with</span> Instructor Name</h3>
 
-       <img class="instructor-img" src="http://cl.ly/image/0r3Q3H110G36/profile-generic.jpg" alt="instructor name">
+      <img class="instructor" src="https://cl.ly/image/0r3Q3H110G36/profile-generic.jpg" alt="instructor name">
+      <h2><span class="cursive">with</span> Instructor Name</h2>
       <ul>
-        <li><i class="fa fa-envelope"></i><a href="mailto:">hello@email.com</a></li>
-        <li><i class="fa fa-desktop"></i><a href="#">mywebsite.com</a></li>
-        <li><i class="fa fa-twitter"></i><a href="http://twitter.com/">@twitter</a></li>
+        <li><a href="mailto:">hello@email.com</a></li>
+        <li><a href="#">mywebsite.com</a></li>
+        <li><a href="http://twitter.com/">@twitter</a></li>
       </ul>
- -->
-      <p class="attribution">Slide presentation created with <a href="https://github.com/LeaVerou/csss">Lea Verou&rsquo;s CSS-based SlideShow System</a> and <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>.</p>
+
+      <p class="attribution">Slide presentation created by <a href="http://christinatruong.com">Christina Truong</a>
+        based on <a href="https://github.com/LeaVerou/csss">Lea Verou's SlideShow</a> and <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>.</p>
     </section>
 
   </main><!-- cls main section -->
 
-  <footer>
-    <p class="license"><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.svg" /></a> by <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
-    <p class="instructions">Use the left <i class="fa fa-arrow-left"></i> and right <i class="fa fa-arrow-right"></i> arrow keys to navigate</p>
-  </footer>
-
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="framework/scripts/jquery-1.11.0.min.js"></script>
   <script src="framework/scripts/slideshow.js"></script>
 
   <!-- Uncomment the plugins you need -->
@@ -1470,23 +1472,18 @@
 
   <script src="framework/scripts/plugins/markdown/marked.js"></script>
   <script src="framework/scripts/plugins/markdown/markdown.js"></script>
-  <!-- <script src="framework/scripts/plugins/highlight/highlight.js"></script> -->
   <script src="framework/scripts/plugins/highlight/highlight-8.4.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
-
+  <script src="framework/scripts/llc.js"></script>
   <script>
     var slideshow = new SlideShow();
 
     // Grabs all the .snippet elements
     var snippets = document.querySelectorAll('.snippet');
-    for(var i=0; i<snippets.length; i++) {
+    for (var i = 0; i < snippets.length; i++) {
       new CSSSnippet(snippets[i]);
     }
-
-    // Adds "edit me" note to editable code areas
-    jQuery(document).ready(function(){
-      jQuery(".snippet").before("<span class=\"edit\">edit me</span>");
-    });
   </script>
-</body>
-</html>
+  </body>
+
+  </html>
