Fix list formatting

--- a/slides-en.html
+++ b/slides-en.html
@@ -849,19 +849,19 @@
         To create a list, type a name for the list, then `=`, then put the items in square brackets.
 
         ```python
-        the_name_of_the_list = ['items', 'separated', 'by','commas']
+        the_name_of_the_list = ['items', 'separated', 'by', 'commas']
         ```
 
         #### Examples:
 
         ```python
-         weather_conditions = ['rainy', 'snowing', 'cloudy','sunny','foggy']
+         weather_conditions = ['rainy', 'snowing', 'cloudy', 'sunny', 'foggy']
 
-         provinces = ['BC', 'AB', 'SK','MB','ON','QC','NL,','NB','NS','PE','YT','NT','NU']
+         provinces = ['BC', 'AB', 'SK', 'MB', 'ON', 'QC', 'NL', 'NB', 'NS', 'PE', 'YT', 'NT', 'NU']
 
-         to_do_list = ['Water plants','Clean bathroom','Buy shoes','Become Prime Minister', 'Solve climate change']
+         to_do_list = ['Water plants', 'Clean bathroom', 'Buy shoes', 'Become Prime Minister', 'Solve climate change']
 
-         prime_numbers = [2,3,5,7,11,13]
+         prime_numbers = [2, 3, 5, 7, 11, 13]
         ```
 
         Just like with variables we want to give our lists good, descriptive names.
@@ -877,7 +877,7 @@
         They are **indexed** (counted) starting at 0.
 
         ```python
-        weather_conditions = ['rainy', 'snowing', 'cloudy','sunny','foggy']
+        weather_conditions = ['rainy', 'snowing', 'cloudy', 'sunny', 'foggy']
         ```
 
         Try these in the python console:
@@ -930,7 +930,7 @@
 
         Suppose we have a list of types of weather.
         ```python
-         weather_conditions = ['rainy', 'snowing', 'cloudy','sunny','foggy']
+         weather_conditions = ['rainy', 'snowing', 'cloudy', 'sunny', 'foggy']
         ```
         What kinds of things could we want to do with this data?
 
@@ -1000,7 +1000,7 @@
           ### Example
 
         ```python
-        weather_conditions = ['rainy', 'snowing', 'cloudy','sunny','foggy']
+        weather_conditions = ['rainy', 'snowing', 'cloudy', 'sunny', 'foggy']
         for type_of_weather in weather_conditions:
             print(type_of_weather)
         ```
