--- a/slides-fr.html
+++ b/slides-fr.html
@@ -843,13 +843,13 @@
         #### Exemples :
 
         ```python
-         conditions_météo = ['pluie', 'neige', 'nuages','soleil','brouillard']
+         conditions_météo = ['pluie', 'neige', 'nuages', 'soleil', 'brouillard']
 
-         provinces = ['BC', 'AB', 'SK','MB','ON','QC','NL,','NB','NS','PE','YT','NT','NU']
+         provinces = ['BC', 'AB', 'SK', 'MB', 'ON', 'QC', 'NL', 'NB', 'NS', 'PE', 'YT', 'NT', 'NU']
 
-         liste_de_tâches = ['Arroser les plantes','Ranger sa chambre','Acheter des chaussures','Devenir Premier ministre', 'Régler le problème des changements climatiques']
+         liste_de_tâches = ['Arroser les plantes', 'Ranger sa chambre', 'Acheter des chaussures', 'Devenir Premier ministre', 'Régler le problème des changements climatiques']
 
-         nombres_premiers = [2,3,5,7,11,13]
+         nombres_premiers = [2, 3, 5, 7, 11, 13]
         ```
 
         Comme pour les variables, nos listes devraient porter des noms évocateurs et descriptifs.
@@ -865,7 +865,7 @@
         Ils sont **indexés** (comptés) à partir de 0.
 
         ```python
-        conditions_météo = ['pluie', 'neige', 'nuages','soleil','brouillard']
+        conditions_météo = ['pluie', 'neige', 'nuages', 'soleil', 'brouillard']
         ```
 
         Essayez ces exemples dans la console Python :
@@ -917,7 +917,7 @@
 
         Supposons que nous avons une liste de types de conditions météo.
         ```python
-         conditions_météo = ['pluie', 'neige', 'nuages','soleil','brouillard']
+         conditions_météo = ['pluie', 'neige', 'nuages', 'soleil', 'brouillard']
         ```
         Que pourrions-nous faire avec ces données?
 
@@ -987,7 +987,7 @@
           ### Exemple
 
         ```python
-        conditions_météo = ['pluie', 'neige', 'nuages','soleil','brouillard']
+        conditions_météo = ['pluie', 'neige', 'nuages', 'soleil', 'brouillard']
         for type_de_météo in conditions_météo:
             print(type_de_météo)
         ```
