Correct some typos in English slides. Fixes #4.

--- a/slides-en.html
+++ b/slides-en.html
@@ -710,7 +710,7 @@
       <script type="text/template">
         ## Indenting multiple items
 
-        To run more than one instruction per item, they must be intented the same amount.
+        To run more than one instruction per item, they must be indented the same amount.
 
         ```python
         weather = "snowing"
@@ -763,7 +763,7 @@
         `or`: either one, or both things must be true
 
         ### Example
-        Suppose a peice of advice applies to multiple situations. This indented block will run in either case.
+        Suppose a piece of advice applies to multiple situations. This indented block will run in either case.
         ```python
         weather = "snowing"
         if weather == "snowing" or weather == 'sleet':
@@ -815,7 +815,7 @@
       <script type="text/template">
         ## Storing Data
 
-        Variables allowed us to store one simple peice of data so far.
+        Variables allowed us to store one simple piece of data so far.
 
         What about more complex data?
 
@@ -917,7 +917,7 @@
         ![Functions](./framework/img/workshop/functions.png)
 
         ### Mini Exercise
-        What are some examples of functions in other software (such as [excel](https://support.office.com/en-us/article/excel-functions-alphabetical-b3944572-255d-4efb-bb96-c6d90033e188)) that you might be familliar with?
+        What are some examples of functions in other software (such as [excel](https://support.office.com/en-us/article/excel-functions-alphabetical-b3944572-255d-4efb-bb96-c6d90033e188)) that you might be familiar with?
 
       </script>
     </section>
@@ -1014,7 +1014,7 @@
 
     Let's combine this with what we learned about conditionals.
 
-    * Create a new file in the exercices folder called `weather_loops.py`
+    * Create a new file in the exercises folder called `weather_loops.py`
     * Create a list with each type of weather in it
     * Add a loop to to **loop through** each type of weather
     * Add an if/elif/else block inside the loop to print out how to dress for each type of weather
