Update Python tutorial links to all use Python 3.

--- a/slides-en.html
+++ b/slides-en.html
@@ -477,7 +477,7 @@
         Why?<!-- .element: class="delayed" -->
 
         You changed <!-- .element: class="delayed" -->`y`, but the old value of `x` is still in memory.
-        Python will remember variable names until you close PyCharm or [clear them manually](https://docs.python.org/2/tutorial/datastructures.html#the-del-statement).
+        Python will remember variable names until you close PyCharm or [clear them manually](https://docs.python.org/3/tutorial/datastructures.html#the-del-statement).
       </script>
     </section>
 
@@ -1125,7 +1125,7 @@
         ufo_data_file.close()
         ```
 
-        More: https://docs.python.org/3.7/tutorial/inputoutput.html#reading-and-writing-files
+        More: https://docs.python.org/3/tutorial/inputoutput.html#reading-and-writing-files
       </script>
     </section>
 
@@ -1416,7 +1416,7 @@
 
         ### Tutorials/Courses:
 
-        * [The (Official) Python Tutorial](http://docs.python.org/2.7/tutorial/)
+        * [The (Official) Python Tutorial](http://docs.python.org/3/tutorial/)
         * [Full Stack Python](http://www.fullstackpython.com)
         * [Udacity - Learn Object Oriented Python](http://www.udacity.com/course/programming-foundations-with-python--ud036)
 
