--- a/installation/windows.html
+++ b/installation/windows.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Ladies Learning Code</title>
-  <!-- Don't alter slideshow.css, CSSS slide deck needs it to work
-  https://github.com/LeaVerou/csss -->
-  <link rel="stylesheet" href="framework/css/slideshow.css" data-noprefix>
-
-  <!-- Theme-specific styles -->
-  <link rel="stylesheet" href="../framework/css/font-awesome.min.css" data-noprefix>
+  <link rel="stylesheet" href="../framework/css/slideshow.css" data-noprefix>
   <link rel="stylesheet" href="../framework/css/fonts.css" data-noprefix>
-  <link rel="stylesheet" href="../framework/css/highlightjs-themes/github.css" data-noprefix>
-  <link rel="stylesheet" href="../framework/css/theme-llc.css" data-noprefix>
+  <link rel="stylesheet" href="../framework/css/highlightjs/github.css" data-noprefix>
+  <link rel="stylesheet" href="../framework/css/styles.css" data-noprefix>
   <link rel="shortcut icon" href="../framework/img/favicon.ico">
 
-  <!-- Workshop-specific styles -->
-  <link rel="stylesheet" href="../framework/css/workshop.css" data-noprefix>
-
-  <!-- Takes care of CSS3 prefixes! -->
+  <!-- Takes care of CSS3 prefixes -->
   <script src="../framework/scripts/prefixfree.min.js"></script>
 
   <!-- opens all links in a new window -->
@@ -26,38 +19,45 @@
 </head>
 
 <!-- Timer/progress bar: Define the presentation duration using "data-duration" in minutes. -->
-<body class="en" data-duration="360">
-  <header class="slide">
-    <img class="logo" src="../framework/img/logo-llc-white.png" alt="Ladies Learning Code logo">
-    <h1>Python Installation: Windows</h1>
 
-    <div class="instructions">
+<body class="en" data-duration="360">
+
+  <main>
+
+  <section class="slide" data-toc data-markdown>
+    <script type="text/template">
+      <h1>Python Installation: Windows</h1>
+
       <ol>
         <li>Download the learner files (zip)</li>
         <li>Extract the zip</li>
         <li>Install the latest version of Python 3.x: <a href="https://www.python.org/downloads">https://www.python.org/downloads</a>
           <br/>
-          <img src="windows-install-1.png" >  
+          <img src="windows-install-1.png" >
         </li>
         <li>Install Pycharm Educational Edition: <a href="https://www.jetbrains.com/pycharm-educational">https://www.jetbrains.com/pycharm-educational</a>
           <br/>
-          <img src="windows-install-2.png" > 
+          <img src="windows-install-2.png" >
         </li>
         <li>Run Pycharm and open the project folder you unzipped
             <br/>
-          <img src="windows-install-3.png" > 
+          <img src="windows-install-3.png" >
         </li>
         <li>
           At the bottom-left click on "Python Console". After a minute the version number should appear.
           <br/>
-          <img src="windows-install-4.png" > 
+          <img src="windows-install-4.png" >
           <br/>
-          <img src="windows-install-5.png" > 
+          <img src="windows-install-5.png" >
         </li>
         <li>You're good to go!</li>
       </ol>
 
-  </header>
+
+  </script>
+</section>
+
+</main><!-- cls main section -->
 
 
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -71,7 +71,7 @@
 
   <script src="../framework/scripts/plugins/markdown/marked.js"></script>
   <script src="../framework/scripts/plugins/markdown/markdown.js"></script>
-  <!-- <script src="framework/scripts/plugins/highlight/highlight.js"></script> -->
+  <!-- <script src="../framework/scripts/plugins/highlight/highlight.js"></script> -->
   <script src="../framework/scripts/plugins/highlight/highlight-8.4.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 
