fixed issue viewing mac install link

--- a/slides-en.html
+++ b/slides-en.html
@@ -45,7 +45,7 @@
           <li>Installation Instructions by Platform:</li>
           <ul>
             <li><a href="installation/windows.html">Windows</a></li>
-            <li><a href="installation/mac.html">Mac</a></li>
+            <li><a href="installation/mac.html">Mac</a></li><br><br>
           </ul>
         </ol>
       </div>
