--- a/slides-fr.html
+++ b/slides-fr.html
@@ -43,7 +43,7 @@
           <li>Consignes d'installation, selon le système :</li>
           <ul>
             <li><a href="installation/windows.html">Windows</a></li>
-            <li><a href="installation/mac.html">Mac</a></li>
+            <li><a href="installation/mac.html">Mac</a></li><br><br>
           </ul>
         </ol>
       </div>
