--- a/slides-fr.html
+++ b/slides-fr.html
@@ -42,8 +42,8 @@
           </li>
           <li>Consignes d'installation, selon le système :</li>
           <ul>
-            <li><a href="installation/windows.html">Windows</a></li>
-            <li><a href="installation/mac.html">Mac</a></li><br><br>
+            <li><a href="installation/windows-fr.html">Windows</a></li>
+            <li><a href="installation/mac-fr.html">Mac</a></li><br><br>
           </ul>
         </ol>
       </div>
