FR translate missed english text

--- a/slides-fr.html
+++ b/slides-fr.html
@@ -866,7 +866,7 @@
            File "<input>", line 1, in <module>
         IndexError: list index out of range
           ```
-        Python cannot find `conditions_météo[10]` because it does not exist.
+        Le Python ne peut pas trouver conditions_météo[10] car ça n'existe pas.
 
 
       </script>
